<resources>
    <string name="app_name">Lab exam02</string>
    <string name="next">Next</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="get_started">Get Started</string>
    <string name="home">Home</string>
    <string name="profile">profile</string>
    <string name="blouse">blouse</string>
    <string name="skirts">Skirts</string>
    <string name="blouse1">blouse!</string>
    <string name="skirt">skirt</string>
    <string name="skirt1">Skirt</string>
    <string name="frock">Frock</string>
    <string name="pants">Pants</string>
    <string name="blouse2">Blouse</string>
    <string name="redJacket">redJacket</string>
    <string name="red_jacket">Red Jacket</string>
    <string name="get_10_discount">Get 10% discount</string>
    <string name="rs_1500_00">RS : 1500.00</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="hi_sarangi">Hi Sarangi</string>
    <string name="name_sarangi_nimesha">Name:Sarangi Nimesha</string>
    <string name="gender_female">Gender:Female</string>
    <string name="address_no23_2_galle">Address:No23/2 Galle</string>
    <string name="shopping_rate">Shopping Rate</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_your_bank_details">Save Your Bank Details</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="profilephoto">TODO</string>
    <string name="plus1">+</string>
    <string name="minus1">-</string>
    <string name="shopping_cart1">Shopping Cart</string>
    <string name="total">Total:</string>
    <string name="rs_11000_00">Rs: 11000.00</string>
    <string name="checkout">CHECKOUT</string>
    <string name="rs_6000_00">RS:6000.00</string>
    <string name="rs_5000_00">RS:5000.00</string>
    <string name="plus2">+</string>
    <string name="delete">delete</string>
    <string name="delete1">delete</string>
    <string name="minus2">-</string>
    <string name="blouse3">TODO</string>
    <string name="skirt3">skirt3</string>
    <string name="submit">Submit</string>
    <string name="name">Name:</string>
    <string name="age">Age</string>
    <string name="address">Address:</string>
    <string name="gender">Gender</string>
    <string name="register">REGISTER</string>
    <string name="pimage">pimage\n</string>
    <string name="payment_sucessfull">PAYMENT SUCESSFULL</string>
    <string name="home2">HOME</string>
    <string name="suu">TODO</string>
    <string name="bank_details">Bank Details</string>
    <string name="name3">Name:</string>
    <string name="cardnumber">CardNumber:</string>
    <string name="expire_date">Expire date:</string>
    <string name="cvv_no">CVV No:</string>
    <string name="save">SAVE</string>
    <string name="pay">PAY</string>
    <string name="navprofile">oprofile</string>
    <string name="navhome">navhome</string>
    <string name="navcart">navcart</string>
    <string name="navhome1">navhome!</string>
    <string name="navprofile1">navprofile!</string>
    <string name="navcart1">navcart!</string>
    <string name="blouse11">blouse!!</string>
    <string name="profile11">profile!!</string>
    <string name="home3">home3</string>
    <string name="profile3">profile3</string>
    <string name="home4">home4</string>
    <string name="profile4">profile4</string>

    <string name="cart5" >cart5</string>
    <string name="cart6">cart6\n\n</string>
    <string name="cart7">cart7</string>
    <string name="blousecart">blousecart\n</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delete4">Delete</string>
    <string name="rs_2500_00">Rs:2500.00</string>
    <string name="skirt4">TODO</string>
    <string name="plus3">+</string>
    <string name="minus3">-</string>
    <string name="delete5">Delete</string>
    <string name="rs_3000_00">RS:3000.00</string>
    <string name="blouse111">blouse111</string>
    <string name="get_started1">GET STARTED</string>
    <string name="frock111">frock</string>
    <string name="address11">Address:</string>
    <string name="get_your_unique_outfit">Get your Unique Outfit</string>
</resources>