<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Register">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView6"
        android:layout_width="409dp"
        android:layout_height="70dp"
        android:layout_marginTop="660dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/navhome1"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/home3"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/images__1_" />

            <ImageButton
                android:id="@+id/navprofile1"
                android:layout_width="215dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/profile3"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/pngtree_avatar_icon_profile_icon_member_login_vector_isolated_png_image_1978396" />

            <ImageButton
                android:id="@+id/navcart1"
                android:layout_width="194dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/cart6"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/shopping_cart_logo_icon_shopping_cart" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="80dp"
        android:text="@string/register"
        android:textColor="#F8F8F8"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/imageButton4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="101dp"
        android:layout_height="97dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="51dp"
        android:contentDescription="@string/pimage"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/michael_dam_mez3pofgs_k_unsplash" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="304dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="71dp"
        android:background="#69C0EC"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/submit3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="354dp"
            android:layout_height="74dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:textColorHint="#050505" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="356dp"
            android:layout_height="62dp"
            android:autofillHints="age"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="text"
            android:textColorHint="#050505" />

        <EditText
            android:id="@+id/editTextTextPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:text="@string/address11"
            android:autofillHints="adress" />

        <EditText
            android:id="@+id/editTextText7"
            android:layout_width="352dp"
            android:layout_height="71dp"
            android:autofillHints="gender"
            android:ems="10"
            android:hint="@string/gender"
            android:inputType="text"
            android:textColorHint="#0B0A0A" />
    </LinearLayout>

    <Button
        android:id="@+id/submit3"
        android:layout_width="143dp"
        android:layout_height="57dp"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="64dp"
        android:background="#321717"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>