<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#080809"
    tools:context=".Bankdetails">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView6"
        android:layout_width="413dp"
        android:layout_height="63dp"
        android:layout_marginTop="660dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/navhome1"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/home3"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/images__1_" />

            <ImageButton
                android:id="@+id/navprofile1"
                android:layout_width="215dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/profile3"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/pngtree_avatar_icon_profile_icon_member_login_vector_isolated_png_image_1978396" />

            <ImageButton
                android:id="@+id/navcart1"
                android:layout_width="169dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/shopping_cart_logo_icon_shopping_cart" />

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="568dp"
        android:text="@string/bank_details"
        android:textColor="#FFFEFE"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="369dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="28dp"
        android:background="#918F8F"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15">

        <EditText
            android:id="@+id/editTextText9"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:autofillHints="name"
            android:ems="10"
            android:inputType="text"
            android:text="@string/name3"
            tools:ignore="DuplicateIds,LabelFor" />

        <EditText
            android:id="@+id/editTextText9"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:autofillHints="cardnumber"
            android:ems="10"
            android:inputType="text"
            android:text="@string/cardnumber"
            tools:ignore="DuplicateIds,LabelFor" />

        <EditText
            android:id="@+id/editTextText9"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/expire_date"
            tools:ignore="DuplicateIds,LabelFor"
            android:autofillHints="exdate" />

        <EditText
            android:id="@+id/editTextText9"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/cvv_no"
            tools:ignore="DuplicateIds,LabelFor"
            android:autofillHints="text" />
    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="169dp"
        android:layout_height="61dp"
        android:layout_marginStart="146dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="8dp"
        android:background="#E68C8C"
        android:text="@string/save"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pay"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginStart="109dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="23dp"
        android:background="#D34A4A"
        android:backgroundTint="#512727"
        android:text="@string/pay"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>